@@ -1,3 +1,7 @@
+2013-08-11 Changed "margin" setting to "papermargin" setting
+           and added "crop_margin" setting that allows adding
+           margins to the cropped document. Committed 0.1.4 to github.
+
 2013-08-06 Added text_depth setting to chefigit configuration which
            specifies how deep to look into dest_dir if tex_file is null.
            Also, if dest_dir is null, then the directory is the same
